# ordered-set

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MIT-LICENSE  README.md  pyproject.toml  setup.py
benchmarks/: ordered_set_benchmark.py
ordered_set/: __init__.py
ordered_set/test/: test_ordered_set_2.py
stableset/test/: test_ordered_set.py  test_ordered_set_3.py
