[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stableset"
authors = [{name = "Idan Miara, Elia Robyn Lake", email = "idan@miara.com"}]
readme = "README.md"
license = {file = "MIT-LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "description"]
requires-python = ">=3.8"

[tool.flit.module]
name = "stableset"

[project.urls]
Home = "https://github.com/idanmiara/ordered-set"

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
